--- a/finance_advisor/evaluation/latency_tests.ipynb
+++ b/finance_advisor/evaluation/latency_tests.ipynb
@@ -12,10 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "22aa317c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chat latency: 3676.00 ms\n",
+      "Risk Profile latency: 2038.04 ms\n",
+      "Portfolio latency: 2037.96 ms\n",
+      "Simulation latency: 2286.01 ms\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import requests\n",
@@ -48,8 +59,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
