--- a/finance_advisor/evaluation/simulation_eval.ipynb
+++ b/finance_advisor/evaluation/simulation_eval.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 📈 Simulation Validation Notebook\n",
     "\n",
     "We run multiple Monte Carlo simulations to validate output stability."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from backend.tools.portfolio_sim import run_monte_carlo_simulation\n",
     "from backend.models.simulate import *\n",
@@ -24,16 +27,26 @@
     "\n",
     "result = run_monte_carlo_simulation(req)\n",
     "result"
-   ],
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
